[tool.poetry]
name = "projet-webscraping"
version = "0.1.0"
description = ""
authors = ["lazstx <sara.jeantet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
